src/styles/iScroll.scss
.middleWrapper {
  position: relative;
  overflow-y: scroll;
  height: 100%;
  -ms-overflow-style: none; /* IE/Edge */
  scrollbar-width: none; /* Firefox */

  &::-webkit-scrollbar {
    display: none; /* Chrome/Safari */
  }

  &.showStatus {
    &:before,
    &:after {
      opacity: 1;
      transition: all 1.5s ease-in-out;
    }

    &:before {
      content: '';
      position: absolute;
      //top: 0;
      //left: 0;
      //width: 100%;
      //height: 100%;
      //backdrop-filter: blur(50px);
      //background-color: rgba(128, 128, 128, 0.5);
      display: inline-block;
      width: 30px;
      height: 30px;
      //border: 3px solid #e3e3e3;
      //border-top: 3px solid #3498db;
      border: 4px dotted #333;
      border-radius: 50%;
      animation: spin 2s linear infinite;
      left: calc(50% - 15px);
      top: calc(50% - 90px);
      z-index: 2;
    }

    @keyframes spin {
      0% {
        transform: rotate(0deg);
      }
      100% {
        transform: rotate(360deg);
      }
    }

    &:after {
      content: 'Initializing iScroll... \A\A Status: 'attr(data-status);
      text-align: center;
      position: absolute;

      display: flex;
      flex-direction: column;
      justify-content: center;
      top: 0;
      left: 0;
      //transform: translate(-50%, -50%);
      white-space: pre;

      padding: 0 150px;
      box-sizing: border-box;
      width: 100%;
      height: 100%;
      backdrop-filter: blur(50px);
    }

    &[data-status='error'] {
      &:after {
        content: 'Error: \A\A 'attr(data-error);
        background-color: rgba(255, 0, 0, 0.25);
        white-space: normal;
      }
    }
  }

  &.hiddingStatus {
    &:before,
    &:after {
      backdrop-filter: blur(0px);
      opacity: 0;
    }
  }
}

.warningHint {
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  white-space: pre-line;
  line-height: 140%;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  //background-color: rgba(255, 0, 0, 0.25);
  backdrop-filter: blur(10px);
  /* background: red; */
  z-index: 3;

  transition: all 0.3s ease-in-out;

  &.collapsed {
    width: 30px;
    height: 30px;

    cursor: pointer;
    right: 20px;

    &:before {
      content: '\21BA';
      font-size: 20px;
      display: inline-block;
      transition: text-shadow 0.6s ease-in-out;
    }

    &:hover {
      &:before {
        font-weight: bold;
      }
    }

    &.active {
      &:before {
        transition: all 0.6s ease-in-out;
        transform: rotate(-360deg);
        //font-weight: bold;
      }
    }

    &.errorFetch {
      &:before {
        text-shadow: 0px 0px 5px red;
      }
    }

    &.successFetch {
      &:before {
        text-shadow: 0px 0px 5px green;
      }
    }
  }

  &__Btn {
    margin: 20px auto;
    display: inline-block;
    border: 1px solid #333;
    background-color: #fff;
    padding: 6px 20px;
    border-radius: 5px;
    cursor: pointer;

    &:hover {
      background-color: #333;
      color: #fff;
    }
  }
}

